UV editor: Edge overlay not shown when edge overlay type is set to 'Dash' #62917

Closed
opened 2019-03-25 09:49:58 +01:00 by Ne Dudgi · 14 comments

System Information
Operating system: Windows 10
Graphics card: GTX 960

Blender Version
Broken: 2.80, 0bbff8a711

Short description of error
UV editor: Edge overlay not shown when edge overlay type is set to Dash.

Exact steps for others to reproduce the error

  • Open a UV editor window using any model
  • Go to edge select mode
  • Select one or more edge.
  • Set edge overlay to Dash.
**System Information** Operating system: Windows 10 Graphics card: GTX 960 **Blender Version** Broken: 2.80, 0bbff8a71138 **Short description of error** UV editor: Edge overlay not shown when edge overlay type is set to Dash. **Exact steps for others to reproduce the error** - Open a UV editor window using any model - Go to edge select mode - Select one or more edge. - Set edge overlay to Dash.
Author

Added subscriber: @blenderUser0803

Added subscriber: @blenderUser0803
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can confirm the issue. It does not seem to relate to the mesh sync option though.

uv_edge_display.blend

Can confirm the issue. It does not seem to relate to the mesh sync option though. [uv_edge_display.blend](https://archive.blender.org/developer/F6880536/uv_edge_display.blend)
Author

Yea, sorry, mesh sync is not needed, just wanted to make sure that UVs are showing up in the UV window.

Yea, sorry, mesh sync is not needed, just wanted to make sure that UVs are showing up in the UV window.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Seems like the same behavior as 279. I suggest that this is a feature request.

Seems like the same behavior as 279. I suggest that this is a feature request.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Talked to Brecht about this and we do consider this a bug. But a very low prio bug.

Talked to Brecht about this and we do consider this a bug. But a very low prio bug.
Member

Ok, as it is related to image editing drawing I will link it to related stuff

Ok, as it is related to image editing drawing I will link it to related stuff
Eitan Traurig self-assigned this 2019-07-29 15:28:18 +02:00
Member

This comment was removed by @EitanSomething

*This comment was removed by @EitanSomething*
Member
I submitted a patch https://developer.blender.org/D5369
Brecht Van Lommel changed title from UV editor: Edge overlay not shown when edge overlay type is set to 'Dash', 'Black' or 'White' to UV editor: Edge overlay not shown when edge overlay type is set to 'Dash' 2019-08-16 16:51:47 +02:00
Eitan Traurig removed their assignment 2019-08-16 16:56:38 +02:00
Member

Added subscriber: @EitanSomething

Added subscriber: @EitanSomething

This issue was referenced by 336a8f283f

This issue was referenced by 336a8f283f4b612b687dc26ea0c86a2c82bf514d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-22 17:32:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62917
No description provided.