Fix part of T62917: selected edge not highlighted with black and white overlays

Differential Revision: https://developer.blender.org/D5369